toolchain/internal/core/analysis/testdata/errors/types/undefined_in_inline.vdl
// @expect: E201

type Envelope {
  payload {
    item MissingType
  }
}
